--- a/restructure_index.html
+++ b/restructure_index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
       <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1"> 
       <title>Vincent Chiang</title>
       <link href="https://fonts.googleapis.com/css?family=Assistant:200, 600" rel="stylesheet">
       <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
@@ -10,9 +11,9 @@
   </head>
     
   <body>
-      <div class="container"> 
-          <div class="top">
-              <div class="top_container">
+      <div class="wrapper"> 
+          <div class="top_container">
+              <div class="top">
                   <div id="about">
                       <h1>Hey there, I'm Vincent Chiang!</h1>
                       <p>I'm studying Computer Science at UC Berkeley, and I'm passionate about leveraging data science and building programs for social good.</p>
@@ -36,26 +37,23 @@
                   </div>
               </div>
           </div>
-          
-          <div class="bottom">
-              <div class="bottom_container">              
-                  <h1>Learn more about me</h1>
-                  <ul>
-                    <li><a id= "logo_svg" href="https://www.google.com"><img alt="Vincent Chiang logo" src="images/100_white_logo.svg"></a>
-                    </li>
-                    <li>
-                        <ul id="descriptions">
-                            <li><a id = "change_coral" href="https://www.google.com">Projects:</a> Analyzing murder rate and death penalty, fastest driving directions for Berkeley, and more!
-                            </li>
-                            <li><a id = "change_teal" href="https://www.google.com">Experience:</a> Data Ops at Fireflies.ai, Finance at The Daily Californian, Data Analysis at UCSC
-                            </li>
-                            <li><a id = "change_navy" href="https://www.google.com">Music:</a> A mix of 60s jazz, folk, covers + originals made with love by me
-                            </li>
-                        </ul>
-                    </li>
-                  </ul>
-              </div>
-          </div>
+            <div id="section_two">
+              <h1>Learn more about me</h1>
+            </div>
+              <ul class="info">
+                <li><a id= "logo_svg" href="https://www.google.com"><img alt="Vincent Chiang logo" src="images/100_outline_logo.svg"></a>
+                </li>
+                <li id = "need_float">
+                    <ul id="descriptions">
+                        <li><a id = "change_coral" href="https://www.google.com">Projects:</a> Analyzing murder rate and death penalty, fastest driving directions for Berkeley, and more!
+                        </li>
+                        <li><a id = "change_teal" href="https://www.google.com">Experience:</a> Data Ops at Fireflies.ai, Finance at The Daily Californian, Data Analysis at UCSC
+                        </li>
+                        <li><a id = "change_navy" href="https://www.google.com">Music:</a> A mix of 60s jazz, folk, covers + originals made with love by me
+                        </li>
+                    </ul>
+                </li>
+              </ul>
       </div>
   </body>
 </html>
