chaanged font style and pics

--- a/restructure_index.html
+++ b/restructure_index.html
@@ -4,7 +4,8 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1"> 
       <title>Vincent Chiang</title>
-      <link href="https://fonts.googleapis.com/css?family=Assistant:200, 600" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Raleway:100, 200, 400, 500" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100" rel="stylesheet">
       <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
       <link rel="stylesheet" type="text/css" href="css/styles.css">
       <link rel="shortcut icon" type="image/png" href="images/tab_icon.png"/>
@@ -12,7 +13,8 @@
     
   <body>
       <div class="wrapper"> 
-          <div class="top_container">
+          <div class="wrapper_two">
+          <div class="section_one">
               <div class="top">
                   <div id="about">
                       <h1>Hey there, I'm Vincent Chiang!</h1>
@@ -37,13 +39,20 @@
                   </div>
               </div>
           </div>
+        </div>
             <div id="section_two">
               <h1>Learn more about me</h1>
-            </div>
-              <ul class="info">
-                <li><a id= "logo_svg" href="https://www.google.com"><img alt="Vincent Chiang logo" src="images/100_outline_logo.svg"></a>
-                </li>
-                <li id = "need_float">
+                <div id="last_line"> 
+                    <img id="profile" alt="placeholder" src="images/circle.png">
+                    <ul id="button_list"> 
+                        <div class="buttons">
+                            <li><button href="https://www.google.com">Projects</button></li>
+                            <li><button href="https://www.google.com">Experience</button></li>
+                            <li><button href="https://www.google.com">Music</button></li>
+                        </div>
+                    </ul> 
+                </div>
+<!--
                     <ul id="descriptions">
                         <li><a id = "change_coral" href="https://www.google.com">Projects:</a> Analyzing murder rate and death penalty, fastest driving directions for Berkeley, and more!
                         </li>
@@ -52,8 +61,8 @@
                         <li><a id = "change_navy" href="https://www.google.com">Music:</a> A mix of 60s jazz, folk, covers + originals made with love by me
                         </li>
                     </ul>
-                </li>
-              </ul>
-      </div>
+-->
+          </div>
+    </div>
   </body>
 </html>
