finished framework need info

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <link href="https://fonts.googleapis.com/css?family=Raleway:100, 200, 400, 500" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100" rel="stylesheet">
       <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+      <script src="js/index_scripts.js"></script>
       <link rel="stylesheet" type="text/css" href="css/styles.css">
       <link rel="shortcut icon" type="image/png" href="images/tab_icon.png"/>
   </head>
@@ -46,13 +47,81 @@
                     <img id="profile" alt="profile" src="images/circle.png">
                     <ul id="button_list"> 
                         <div class="buttons">
-                            <li><button href="https://www.google.com">Projects</button></li>
-                            <li><button href="https://www.google.com">Experience</button></li>
-                            <li><button href="https://www.google.com">Music</button></li>
+                            <li><button href="https://www.google.com" id="projects">Projects</button></li>
+                            <li><button href="https://www.google.com" id="experience">Experience</button></li>
+                            <li><button href="https://www.google.com" id="music">Music</button></li>
                         </div>
                     </ul>            
                     <img id="placeholder" alt="Vincent Chiang Penrose Triangle" src="images/placeholder.svg">
-                </div>
+                </div>  
+                <section class="hidden">
+                    <div id="projects_text"> 
+                        <h5>DirectCal</h5>
+                            <ul>    
+                                <li>For my very first hackathon, I decided to create program that w</li>
+                                <li>For my very first hackathon, I decided to create program that w</li>
+                                <li>For my very first hackathon, I decided to create program that w</li>
+                                <li>For my very first hackathon, I decided to create program that w</li>
+                                <li>For my very first hackathon, I decided to create program that w</li>
+                                <li>For my very first hackathon, I decided to create program that w</li>
+                                <li>For my very first hackathon, I decided to create program that w</li>                                   
+                            </ul>
+                    </div>
+                    <div id="experience_text">
+                        <h5>DirectCal</h5>
+                            <ul> 
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                                <li>jbird!</li>
+                            </ul>
+                    </div>
+                    <div id="music_text">
+                        <h5>DirectCal</h5>
+                            <ul>    
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                                <li>lunaaaa</li>
+                            </ul>
+                    </div>
+                </section>
 <!--                
                     <ul id="descriptions">
                         <li><a id = "change_coral" href="https://www.google.com">Projects:</a> Analyzing murder rate and death penalty, fastest driving directions for Berkeley, and more!
