optimize for mobile device

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1"> 
       <title>Vincent Chiang</title>
-      <link href="https://fonts.googleapis.com/css?family=Raleway:100, 200, 400, 500" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Raleway:200, 400, 500" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Merriweather:300" rel="stylesheet">
       <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
       <script src="js/index_scripts.js"></script>
       <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -24,16 +25,16 @@
                   </div>
                   <div>
                       <ul id="contact_links">
-                          <li><a href="https://www.linkedin.com/in/inventcchiang/">
+                          <li><a href="https://www.linkedin.com/in/inventcchiang/" target="_blank">
                               <img alt="Vincent Chiang Linkedin" src = "images/white_linkedin.svg"></a>
                           </li>
-                          <li><a href="mailto:vincentchiang@berkeley.edu">
+                          <li><a href="mailto:vincentchiang@berkeley.edu" target="_blank">
                               <img alt="Vincent Chiang Email" src = "images/white_mail.svg"></a>
                           </li>
-                          <li><a href="https://github.com/chiangvincent">
+                          <li><a href="https://github.com/chiangvincent" target="_blank">
                               <img alt="Vincent Chiang Github" src = "images/white_github.svg"></a>
                           </li>
-                          <li><a href="docs/vincent_chiang_resume_cs.pdf">
+                          <li><a href="docs/vincent_chiang_resume_cs.pdf" target="_blank">
                               <img alt = "Vincent Chiang Resume" src = "images/white_resume.svg"></a>
                           </li> 
                       </ul>
@@ -56,15 +57,21 @@
                 </div>  
                 <section class="hidden">
                     <div id="projects_text"> 
-                        <h5>DirectCal</h5>
+                        <p>Projects give me a chance to build things I really value; it's important to me that my projects have potential for social impact.<br>I make a conscious effort to challenge myself with every new project. Here are some I've worked on in the past, and some planned for the future!  
+                    </p>
+                        <a href="https://devpost.com/software/directcal" target="_blank">DirectCal</a>
                             <ul>    
-                                <li>For my very first hackathon, I decided to create program that w</li>
-                                <li>For my very first hackathon, I decided to create program that w</li>
-                                <li>For my very first hackathon, I decided to create program that w</li>
-                                <li>For my very first hackathon, I decided to create program that w</li>
-                                <li>For my very first hackathon, I decided to create program that w</li>
-                                <li>For my very first hackathon, I decided to create program that w</li>
-                                <li>For my very first hackathon, I decided to create program that w</li>                                   
+                                <li>Developed Python program that directly creates events for Google Calendars from event flyer pictures</li>
+                                <li>Worked with Google API Python Client to implement Google Calendar, Cloud Platforms/Vision, Translate APIs</li>
+                                <li>Built functions to extract and parse input data from pictures</li>
+                                <li>Developed GUI with Tkinter</li>  
+                            </ul>
+                        <a href="https://devpost.com/software/directcal" target="_blank">DirectCal</a>
+                            <ul>    
+                                <li>Developed Python program that directly creates events for Google Calendars from event flyer pictures</li>
+                                <li>Worked with Google API Python Client to implement Google Calendar, Cloud Platforms/Vision, Translate APIs</li>
+                                <li>Built functions to extract and parse input data from pictures</li>
+                                <li>Developed GUI with Tkinter</li>  
                             </ul>
                     </div>
                     <div id="experience_text">
