starting img slider

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <div class="buttons">
                                 <li><button href="https://www.google.com" id="projects">Projects</button></li>
                                 <li><button href="https://www.google.com" id="experience">Experience</button></li>
-                                <li><button href="https://www.google.com" id="music">Music</button></li>
+                                <li><button href="https://www.google.com" id="music">Photography</button></li>
                             </div>
                         </ul>
                   </div>
@@ -61,7 +61,7 @@
                     <img id="triangle" alt="Vincent Chiang Penrose Triangle" src="images/placeholder.svg">
                   </div>
                         <div class="hidden" id="projects_text"> 
-                            <p>Projects give me a chance to build things I really value; it's important to me that my projects have potential for social impact. With every new project, I try to learn new frameworks, languages, and tools for a challenging (but rewarding!) experience. Here are some I've worked on in the past, and some planned for the future:</p>
+                            <p>It's important to me that my projects have potential for social impact. With every new project, I try to learn new frameworks, languages, and tools for a challenging (but rewarding!) experience. See my resume for a complete list.</p>
                             <a href="https://github.com/chiangvincent/hospitalityapp" target="_blank">Hospitality App (in progress)</a>
                                 <ul>    
                                     <li>Built Python web app that recommends hospitals based on distance and medicare coverage surgical procedures</li>
@@ -72,16 +72,16 @@
                                 <ul>    
                                     <li>Developed Python program that directly creates events for Google Calendars from event flyer pictures</li>
                                     <li>Worked with Google API Python Client to implement Google Calendar, Cloud Platform/Vision, Translate APIs</li>
-                                    <li>Built functions to extract and parse input data from pictures</li>
+                                    <li>Built functions to parse input data from pictures</li>
                                     <li>Developed GUI with Tkinter</li>  
                                 </ul>
                         </div>
                         <div class="hidden" id="experience_text">
-                            <h5>Development Intern @ <a href="https://www.fireflies.ai" target="_blank">  Fireflies.ai</a></h5> 
+                            <h5>Data/Business Ops Intern @ <a href="https://www.fireflies.ai" target="_blank">  Fireflies.ai</a></h5> 
                                 <ul> 
                                     <li>Write Google scripts (JavaScript) to filter/clean sales ops data on Google Sheets pulled from Hubspot</li>
                                     <li>SQL queries to analyze sales funnel data, create visualizations of user segments and sales performance</li>
-                                    <li>Design marketing automation stack with Autopilot and Mailchimp, design blog with Wordpress/CSS</li>
+                                    <li>Design blog with Wordpress/CSS, design marketing automation stack with Autopilot and Mailchimp</li>
                                 </ul>
                             <h5>Finance Intern @ <a href="http://www.dailycal.org/" target="_blank">  The Daily Californian</a></h5> 
                                 <ul> 
@@ -95,18 +95,11 @@
                                 </ul>
                         </div>
                         <div class="hidden" id="music_text">
-                            <h5>Development Intern @ <a href="https://www.fireflies.ai" target="_blank">  Fireflies.ai</a></h5> 
-                                <ul> 
-                                    <li>Write Google scripts (JavaScript) to filter/clean sales ops data on Google Sheets pulled from Hubspot</li>
-                                    <li>SQL queries to analyze sales funnel data, create visualizations of user segments and sales performance</li>
-                                    <li>Design marketing automation stack with Autopilot and Mailchimp, design blog with Wordpress/CSS</li>
-                                </ul>
-                            <h5>Development Intern @ <a href="https://www.fireflies.ai" target="_blank">  Fireflies.ai</a></h5> 
-                                <ul> 
-                                    <li>Write Google scripts (JavaScript) to filter/clean sales ops data on Google Sheets pulled from Hubspot</li>
-                                    <li>SQL queries to analyze sales funnel data, create visualizations of user segments and sales performance</li>
-                                    <li>Design marketing automation stack with Autopilot and Mailchimp, design blog with Wordpress/CSS</li>
-                                </ul>
+                          <div class = "pic_container">
+                              <div class="images">
+                                
+                              </div>
+                          </div>
                         </div>
                     </div>
                 </div>  
