updated projects, experience sections

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                   <div id="about">
                       <h1>Hey there, I'm Vincent Chiang!</h1>
                       <p>I'm studying Computer Science at UC Berkeley, and I'm passionate about leveraging data science and building programs for social good.</p>
-                      <p>In my spare time I love a good baking challenge, hiking with my dog, writing songs, and listening to an unhealthy amount of Aretha Franklin.</p>                    
+                      <p>In my spare time I love a good baking challenge, hiking with my dog, taking pictures, and listening to an unhealthy amount of Aretha Franklin.</p>                    
                   </div>
                   <div>
                       <ul id="contact_links">
@@ -62,15 +62,20 @@
                   </div>
                         <div class="hidden" id="projects_text"> 
                             <p>It's important to me that my projects have potential for social impact. With every new project, I try to learn new frameworks, languages, and tools for a challenging (but rewarding!) experience. See my resume for a complete list.</p>
-                            <a href="https://github.com/chiangvincent/hospitalityapp" target="_blank">Hospitality App (in progress)</a>
+                            <a href="https://github.com/chiangvincent/hospitalityapp" target="_blank">Hospitality App</a>
                                 <ul>    
-                                    <li>Built Python web app that recommends hospitals based on distance and medicare coverage surgical procedures</li>
-                                    <li>Worked wisth Google Maps, Places, and Geolocation APIs</li>
-                                    <li>Used MySQL for database, SQLAlchemy to construct queries and models, Python/Flask framework and Bootstrap CDN for backend and frontend design</li>
+                                    <li>Python web app that recommends hospitals based on distance and medicare coverage for common procedures</li>
+                                    <li>Worked wisth Google Distance Matrix, Geocoding, and Maps JavaScript APIs</li>
+                                    <li>MySQL for database, SQLAlchemy for dynamic models, Python/Flask framework and Bootstrap CDN for backend and frontend design, respectively</li>
                                 </ul>
-                            <a href="https://devpost.com/software/directcal" target="_blank">DirectCal</a>
+                            <h5><a href="https://github.com/wizgrao/splash" target="_blank">Splash</a> x <a href="https://www.eventbrite.com/e/developer-camp-10th-anniversary-tickets-36601458949#tickets" target="_blank"> San Jose Developer Camp</a></h5>
                                 <ul>    
-                                    <li>Developed Python program that directly creates events for Google Calendars from event flyer pictures</li>
+                                    <li>Developed game to educate children on water pollution and conservation</li>
+                                    <li>Built with HTML/CSS, JavaScript, jQuery, Firebase, Node.js, won "Most Educational" Award</li>
+                                </ul>
+                            <h5><a href="https://devpost.com/software/directcal" target="_blank">DirectCal</a> x <a href="https://calhacks.io/" target="_blank">CalHacks </a></h5>
+                                <ul>    
+                                    <li>Python program that automatically creates Google Calendars events from event flyer pictures</li>
                                     <li>Worked with Google API Python Client to implement Google Calendar, Cloud Platform/Vision, Translate APIs</li>
                                     <li>Built functions to parse input data from pictures</li>
                                     <li>Developed GUI with Tkinter</li>  
@@ -83,10 +88,12 @@
                                     <li>SQL queries to analyze sales funnel data, create visualizations of user segments and sales performance</li>
                                     <li>Design blog with Wordpress/CSS, design marketing automation stack with Autopilot and Mailchimp</li>
                                 </ul>
-                            <h5>Finance Intern @ <a href="http://www.dailycal.org/" target="_blank">  The Daily Californian</a></h5> 
+                            <h5>Finance Manager @ <a href="http://www.dailycal.org/" target="_blank">  The Daily Californian</a></h5> 
                                 <ul> 
-                                    <li>Document and oversee monthly revenue, create production, discount, sales reports via Excel</li>
-                                    <li>Create invoices, enter legal sales orders, bills and checks into QuickBooks</li>
+                                    <li>Manage and train group of Finance Interns</li>
+                                    <li>Oversee monthly revenue, create production, discount, sales reports via Excel</li>
+                                    <li>Carry out weekly invoicing, proof legal sales orders, record bills and checks with QuickBooks</li>
+                                    <li>Work with Salesforce to track education donations</li>
                                 </ul>
                             <h5>Economics Intern @ <a href="http://ucsc-sip.org/" target="_blank"> SIP/UCSC</a></h5> 
                                 <ul> 
