minor info section modification

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                   <div id="about">
                       <h1>Hey there, I'm Vincent Chiang!</h1>
                       <p>I'm studying Computer Science at UC Berkeley, and I'm passionate about leveraging data science and building programs for social good.</p>
-                      <p>In my spare time I love a good baking challenge, hiking with my dog, taking pictures, and listening to an unhealthy amount of Aretha Franklin.</p>                    
+                      <p>In my spare time I love a good baking challenge, hiking with my dog, and exploring the outdoors with my camera. </p>                    
                   </div>
                   <div>
                       <ul id="contact_links">
